this commit is late, caught up in trying to fix spacing.

--- a/index.css
+++ b/index.css
@@ -1,3 +1,27 @@
 h1 {
-	font-size:250%;
+	color: #2C3E50;
+	font-size: 30px;
+	font-weight: bold;
+	margin: 0;
+}
+
+h2 {
+	font-size:25px;
+}
+h4 {
+	font-size: 20px;
+	font-weight: lighter;
+	line-height: 2;
+}
+
+a {
+	font-size:20px;
+}
+ul {
+	font-size: 20px;
+	list-style-type: none;
+}
+
+li {
+	margin: 20px 0;
 }
